--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "axios": "^0.27.2",
+    "faunadb": "^4.6.0",
     "next": "12.2.0",
+    "next-auth": "^4.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
@@ -19,6 +21,7 @@
     "stripe": "^9.11.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^18.0.1",
     "@types/react": "^18.0.14",
     "eslint": "8.19.0",
