--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.32.0",
     "@types/axios": "^0.14.0",
     "axios": "^0.27.2",
     "faunadb": "^4.6.0",
