--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^6.7.1",
+    "@prismicio/react": "^2.5.0",
     "@stripe/stripe-js": "^1.32.0",
     "@types/axios": "^0.14.0",
     "axios": "^0.27.2",
