--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "faunadb": "^4.6.0",
     "next": "12.2.0",
     "next-auth": "^4.9.0",
+    "prismic-dom": "^2.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
     "@types/node": "^18.0.1",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^18.0.14",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
